// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-85yu03-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-1qy2jjj-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-1oheeyj-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1sztnel-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-hy13us-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-1oheeyj-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-zaj8az-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-hy13us-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-1oheeyj-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-85yu03-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-1qy2jjj-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-1oheeyj-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-jh2kan-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-1qy2jjj-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-1atsk5c-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-jh2kan-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1yy8u54-Button"
        >
          <div
            className="css-1qy2jjj-Button"
          >
            <span
              className="css-1gnbc76-Icon"
            >
              <SvgrURL
                className="css-bbphqq-Icon"
              />
            </span>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
